--- a/VRChat/67/1067567.html
+++ b/VRChat/67/1067567.html
@@ -102,7 +102,7 @@
     <script src=
     "https://asset.booth.pm/assets/3300b3d609d626203a57.js" defer=
     "defer" nonce=
-    "DDZr/Q+ZmaBjoXRbWkl4G8SUFfoxxYkaoJU94hRzCpw="></script>
+    "3zynQmCAS7RwGZY5wIa6SoJdn8diIqZbBQL0oNNi11c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Vlend】特殊液体金属刃式携帯切断装置 LMS model-212","description":"コラボ専門3Dモデルブランド「Vlend」\n第一段「もしも！あのVtuberが武器を持ったら？」において提示されたVT-212/ニーツちゃんのお題「ゴタゴタとした機械部分を極力排除した、洗練されたデザインの近未来チェーンソー」に沿って制作を行ったモデルです。\n\n","url":"https://booth.pm/ja/items/1067567","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1067567/85ba183c-de98-4e68-b86d-f74768f9e980_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DDZr/Q+ZmaBjoXRbWkl4G8SUFfoxxYkaoJU94hRzCpw="></script>
+    nonce="3zynQmCAS7RwGZY5wIa6SoJdn8diIqZbBQL0oNNi11c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -685,7 +685,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;TOKYO FES Feb.2023&quot;,&quot;value&quot;:&quot;tokyofes-feb2023&quot;},{&quot;label&quot;:&quot;#エアブー230212&quot;,&quot;value&quot;:&quot;air-boo-0212&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル2023[冬]&quot;,&quot;value&quot;:&quot;wonfes2023winter&quot;},{&quot;label&quot;:&quot;COMIC CITY 東京148&quot;,&quot;value&quot;:&quot;comiccity-tokyo148&quot;},{&quot;label&quot;:&quot;関西コミティア66&quot;,&quot;value&quot;:&quot;k-comitia66&quot;},{&quot;label&quot;:&quot;ドールショウ68冬&quot;,&quot;value&quot;:&quot;dollshow68&quot;},{&quot;label&quot;:&quot;こみっくトレジャー41&quot;,&quot;value&quot;:&quot;comic-treasure-41&quot;},{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;},{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;}]"
+    "[{&quot;label&quot;:&quot;COMITIA143&quot;,&quot;value&quot;:&quot;comitia143&quot;},{&quot;label&quot;:&quot;TOKYO FES Feb.2023&quot;,&quot;value&quot;:&quot;tokyofes-feb2023&quot;},{&quot;label&quot;:&quot;#エアブー230212&quot;,&quot;value&quot;:&quot;air-boo-0212&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル2023[冬]&quot;,&quot;value&quot;:&quot;wonfes2023winter&quot;},{&quot;label&quot;:&quot;COMIC CITY 東京148&quot;,&quot;value&quot;:&quot;comiccity-tokyo148&quot;},{&quot;label&quot;:&quot;関西コミティア66&quot;,&quot;value&quot;:&quot;k-comitia66&quot;},{&quot;label&quot;:&quot;ドールショウ68冬&quot;,&quot;value&quot;:&quot;dollshow68&quot;},{&quot;label&quot;:&quot;こみっくトレジャー41&quot;,&quot;value&quot;:&quot;comic-treasure-41&quot;},{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
